@@ -331,3 +331,9 @@ Wed Jul 30 09:32:01 CEST 2003 <ddouxchamps@users.sf.net>
       mmap double buffering, add pipe mode option, adjust palette by option
       (pipe) or by ioctl, lookup default v4l device name via procfs, daemon
       option.
+
+2003-09-23  Dan Dennedy <dan@dennedy.org>
+   * examples/grab_color_image.c: fix locating cam by guid on any port
+   * examples/dc1394_vloopback.c: add --guid option like grab_color_image
+     and renamed some options, and added root detection and reset
+
